# dzhanibekov-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: geometry.hpp  math_utils.hpp  renderer.hpp  rigid_body.hpp  simulation.hpp
src/: geometry.cpp  main.cpp  renderer.cpp  rigid_body.cpp  rigid_body_backup2.cpp  simulation.cpp
